<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.detail.DetailActivity">

        <TextView
            android:id="@+id/tvNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_peminjam"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tvNameTitle"
            app:layout_constraintTop_toTopOf="@id/tvNameTitle" />

        <TextView
            android:id="@+id/tvBookNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_buku"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameValue" />


        <TextView
            android:id="@+id/tvBookNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tvBookNameTitle"
            app:layout_constraintTop_toTopOf="@id/tvBookNameTitle" />

        <TextView
            android:id="@+id/tvCreatedDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_pinjam"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBookNameValue" />


        <TextView
            android:id="@+id/tvCreatedDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tvCreatedDateTitle"
            app:layout_constraintTop_toTopOf="@id/tvCreatedDateTitle" />


        <TextView
            android:id="@+id/tvPinaltyDayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_hari_pinjam"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreatedDateTitle" />


        <TextView
            android:id="@+id/tvPinaltyDayValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tvPinaltyDayTitle"
            app:layout_constraintTop_toTopOf="@id/tvPinaltyDayTitle" />


        <TextView
            android:id="@+id/tvTotalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_denda"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPinaltyDayValue" />


        <TextView
            android:id="@+id/tvTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tvTotalTitle"
            app:layout_constraintTop_toTopOf="@id/tvTotalTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kembalikan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>